Fix the padding and alignment around the menu icons.

--- a/theme/lepton/chrome.css
+++ b/theme/lepton/chrome.css
@@ -43,7 +43,6 @@
     --inline-tab-padding:      6px !important; /* Original: 8px */
 
     /* Panel */
-    --arrowpanel-menuicon-padding: 8px;
     --arrowpanel-menuitem-margin: 0 var(--arrowpanel-menuicon-padding) !important; /* Original: 0 8px */
     --arrowpanel-menuitem-padding: 5px !important; /* Original: 8px */
     --arrowpanel-padding:        0.8em !important; /* Original: 16px or .cui-widget-panel, .cui-widget-panel::part(arrowcontent) => 4px 0 */
